unpackaged/main/default/objects/User/fields/Edit_Locked_Accounts_Logbooks__c.field-meta.xml
<CustomField>
    <fullName>Edit_Locked_Accounts_Logbooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Locked Accounts/Logbooks</label>
    <type>Checkbox</type>
</CustomField>