unpackaged/main/default/objects/User/fields/My_Teams_Active__c.field-meta.xml
<CustomField>
    <fullName>My_Teams_Active__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>My Teams - Active</label>
    <type>TextArea</type>
</CustomField>