unpackaged/main/default/objects/User/fields/NoClone__c.field-meta.xml
<CustomField>
    <fullName>NoClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoClone</label>
    <type>Checkbox</type>
</CustomField>