unpackaged/main/default/objects/User/validationRules/Cannot_Change_CDNA_Nickname.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_CDNA_Nickname</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(CommunityNickname) &amp;&amp;
PRIORVALUE(CommunityNickname) == 'CDNA'</errorConditionFormula>
    <errorDisplayField>Alias</errorDisplayField>
    <errorMessage>Nickname for Claude DNA cannot be changed. It is used in validation rules</errorMessage>
</ValidationRule>